	Updated devel/monotone-server to 0.22nb1 [jmmv 2005-08-13]
	Updated textproc/docbook-xsl to 1.69.1 [jmmv 2005-08-13]
	Added net/snort-rules version 2.3 [adrianp 2005-08-13]
	Updated net/snort to 2.4.0 [adrianp 2005-08-13]
	Updated textproc/xmlto to 0.0.18nb1 [adrianp 2005-08-13]
	Updated sysutils/mklivecd to 0.13.1 [xtraeme 2005-08-13]
	Updated ham/grig to 0.4.3 [wulf 2005-08-13]
	Updated ham/cwtext to 0.94 [wulf 2005-08-13]
	Updated lang/py24-html-docs to 2.4.1 [toshii 2005-08-14]
	Updated www/awstats to 6.4 [minskim 2005-08-14]
	Updated databases/bdb-xml to 1.2.1nb2 [minskim 2005-08-14]
	Updated net/freeradius to 1.0.4nb1 [adrianp 2005-08-14]
	Updated x11/wxGTK24 to 2.4.2nb7 [veego 2005-08-14]
	Updated misc/xchm to 1.0 [minskim 2005-08-14]
	Updated mail/postfix-current to postfix-2.3-200507206 [christos 2005-08-14]
	Updated devel/lwp to 2.0 [xtraeme 2005-08-15]
	Updated devel/rpc2 to 1.27 [xtraeme 2005-08-15]
	Updated devel/rvm to 1.11 [xtraeme 2005-08-15]
	Updated mail/qmail-qfilter to 2.1 [schmonz 2005-08-15]
	Updated cross/avr-libc to 1.2.5 [wennmach 2005-08-15]
	Updated ham/linpsk to 0.8.1 [wulf 2005-08-15]
	Updated emulators/suse_base to 7.3nb7 [dmcmahill 2005-08-15]
	Updated emulators/suse91_base to 9.1nb7 [dmcmahill 2005-08-15]
	Updated mail/msmtp to 1.4.4 [adam 2005-08-16]
	Updated devel/libextractor to 0.5.3 [adam 2005-08-16]
	Updated ham/xlog to 1.2.2 [wulf 2005-08-16]
	Updated comms/efax-gtk to 3.0.4 [adam 2005-08-16]
	Updated games/rocksndiamonds to 3.1.1 [adam 2005-08-16]
	Removed games/rocksndiamonds-sdl [adam 2005-08-16]
	Updated mail/mhonarc to 2.6.15 [jwise 2005-08-16]
	Updated comms/fidogate to 4.4.10 [tv 2005-08-17]
	Updated databases/p5-DBD-CSV to 0.22 [hiramatsu 2005-08-17]
	Updated net/entropy to 0.9.1.438 [tv 2005-08-17]
	Updated www/ap2-perl to 2.0.1 [tv 2005-08-17]
	Updated net/openvpn to 2.0.1 [jlam 2005-08-17]
	Removed net/openvpn-current [jlam 2005-08-17]
	Updated www/php4 to 4.4.0 [tron 2005-08-17]